tests/unit/errors/test5.js
// Defincion de funcion con llaves faltantes
function a() {
console.log(22);